--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
         <div class="header__pizza"></div>
         <div class="header__wrap">
             <div class="logo">
-                <a><img src="img/logo.png" alt="logo"></a>
+                <a><img src="img/logo-2.jpg" alt="logo"></a>
             </div>
             <div class="phone">
                 <p class="phone__number">700-300</p>
