--- a/app/catalog.html
+++ b/app/catalog.html
@@ -136,14 +136,14 @@
             </ul>
             <div class="catalog-content__list">
                 <article class="catalog-content__item">
-                    <img src="./img/rolls/roll-2.jpg" alt="" class="catalog-content__img">
+                    <img src="img/roll-2.jpg" alt="" class="catalog-content__img">
                     <p class="catalog-content__title">Роллы с огурцом <br>(6 шт)</p>
                     <p class="catalog-content__price">110 руб.</p>
                     <p class="catalog-content__desc">Огурец, рис, кунжут</p>
                     <a href="" class="catalog-content__order">В корзину</a>
                 </article>
                 <article class="catalog-content__item">
-                    <img src="./img/rolls/roll-1.jpg" alt="" class="catalog-content__img">
+                    <img src="img/roll-1.jpg" alt="" class="catalog-content__img">
                     <p class="catalog-content__title">Роллы с авокадо <br>(6 шт)</p>
                     <p class="catalog-content__price">120 руб.</p>
                     <p class="catalog-content__desc">Авокадо, рис, кунжут, нори</p>
@@ -155,7 +155,7 @@
                     <!--</div>-->
                 </article>
                 <article class="catalog-content__item">
-                    <img src="./img/rolls/roll-3.jpg" alt="" class="catalog-content__img">
+                    <img src="img/roll-3.jpg" alt="" class="catalog-content__img">
                     <p class="catalog-content__title">Роллы с лососем <br>(6 шт)</p>
                     <p class="catalog-content__price">170 руб.</p>
                     <p class="catalog-content__desc">Лосось, рис, нори</p>
@@ -167,21 +167,21 @@
                     </div>
                 </article>
                 <article class="catalog-content__item">
-                    <img src="./img/rolls/roll-4.jpg" alt="" class="catalog-content__img">
+                    <img src="img/roll-4.jpg" alt="" class="catalog-content__img">
                     <p class="catalog-content__title">Роллы с тунцом<br>(6 шт)</p>
                     <p class="catalog-content__price">110 руб.</p>
                     <p class="catalog-content__desc">Тунец, рис, нори</p>
                     <a href="" class="catalog-content__order">В корзину</a>
                 </article>
                 <article class="catalog-content__item">
-                    <img src="./img/rolls/roll-3.jpg" alt="" class="catalog-content__img">
+                    <img src="img/roll-3.jpg" alt="" class="catalog-content__img">
                     <p class="catalog-content__title">Роллы с огурцом <br>(6 шт)</p>
                     <p class="catalog-content__price">110 руб.</p>
                     <p class="catalog-content__desc">Огурец, рис, кунжут</p>
                     <a href="" class="catalog-content__order">В корзину</a>
                 </article>
                 <article class="catalog-content__item">
-                    <img src="./img/rolls/roll-4.jpg" alt="" class="catalog-content__img">
+                    <img src="img/roll-4.jpg" alt="" class="catalog-content__img">
                     <p class="catalog-content__title">Роллы с огурцом <br>(6 шт)</p>
                     <p class="catalog-content__price">110 руб.</p>
                     <p class="catalog-content__desc">Огурец, рис, кунжут</p>
@@ -193,42 +193,42 @@
                     <!--</div>-->
                 </article>
                 <article class="catalog-content__item">
-                    <img src="./img/rolls/roll-1.jpg" alt="" class="catalog-content__img">
+                    <img src="img/roll-1.jpg" alt="" class="catalog-content__img">
                     <p class="catalog-content__title">Роллы с огурцом <br>(6 шт)</p>
                     <p class="catalog-content__price">110 руб.</p>
                     <p class="catalog-content__desc">Огурец, рис, кунжут</p>
                     <a href="" class="catalog-content__order">В корзину</a>
                 </article>
                 <article class="catalog-content__item">
-                    <img src="./img/rolls/roll-1.jpg" alt="" class="catalog-content__img">
+                    <img src="img/roll-1.jpg" alt="" class="catalog-content__img">
                     <p class="catalog-content__title">Роллы с огурцом <br>(6 шт)</p>
                     <p class="catalog-content__price">110 руб.</p>
                     <p class="catalog-content__desc">Огурец, рис, кунжут</p>
                     <a href="" class="catalog-content__order">В корзину</a>
                 </article>
                 <article class="catalog-content__item">
-                    <img src="./img/rolls/roll-1.jpg" alt="" class="catalog-content__img">
+                    <img src="img/roll-1.jpg" alt="" class="catalog-content__img">
                     <p class="catalog-content__title">Роллы с огурцом <br>(6 шт)</p>
                     <p class="catalog-content__price">110 руб.</p>
                     <p class="catalog-content__desc">Огурец, рис, кунжут</p>
                     <a href="" class="catalog-content__order">В корзину</a>
                 </article>
                 <article class="catalog-content__item">
-                    <img src="./img/rolls/roll-1.jpg" alt="" class="catalog-content__img">
+                    <img src="img/roll-1.jpg" alt="" class="catalog-content__img">
                     <p class="catalog-content__title">Роллы с огурцом <br>(6 шт)</p>
                     <p class="catalog-content__price">110 руб.</p>
                     <p class="catalog-content__desc">Огурец, рис, кунжут</p>
                     <a href="" class="catalog-content__order">В корзину</a>
                 </article>
                 <article class="catalog-content__item">
-                    <img src="./img/rolls/roll-1.jpg" alt="" class="catalog-content__img">
+                    <img src="img/roll-1.jpg" alt="" class="catalog-content__img">
                     <p class="catalog-content__title">Роллы с огурцом <br>(6 шт)</p>
                     <p class="catalog-content__price">110 руб.</p>
                     <p class="catalog-content__desc">Огурец, рис, кунжут</p>
                     <a href="" class="catalog-content__order">В корзину</a>
                 </article>
                 <article class="catalog-content__item">
-                    <img src="./img/rolls/roll-1.jpg" alt="" class="catalog-content__img">
+                    <img src="img/roll-1.jpg" alt="" class="catalog-content__img">
                     <p class="catalog-content__title">Роллы с огурцом <br>(6 шт)</p>
                     <p class="catalog-content__price">110 руб.</p>
                     <p class="catalog-content__desc">Огурец, рис, кунжут</p>
@@ -259,7 +259,7 @@
                 </p>
             </div>
             <div class="kaerus">
-                <img src="./img/logo-kaerus.png" alt="kaerus" class="kaerus__img">
+                <img src="img/logo-kaerus.png" alt="kaerus" class="kaerus__img">
                 <a href="http://kaerus.ru/" class="kaerus__link">Сделано с любовью в Kaerus</a>
             </div>
         </div>
