--- a/app/tovar.html
+++ b/app/tovar.html
@@ -5,7 +5,7 @@
     <title>Время есть</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="Murat Barkinkhoev">
+    <meta name="author" content="">
     <link rel="shortcut icon" href="favicon.ico">
     <!-- build:css css/vendor.min.css -->
     <!-- bower:css -->
